arrumado os problemas de duplo clique nos botoes

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         </div>
         <div class="secondary-container">
             <div class="buttons-container">
-                <button class="btn" value="25">Trabalho Focado</button>
-                <button class="btn" value="5">Pausa Curta</button>
-                <button class="btn" value="15">Pausa Longa</button>
+                <button class="btn" id="btn-25" value="25">Trabalho Focado</button>
+                <button class="btn" id="btn-5"value="5">Pausa Curta</button>
+                <button class="btn" id="btn-15" value="15">Pausa Longa</button>
             </div>
         </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
