--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <button class="btn" id="btn-25" value="25">Trabalho Focado</button>
                 <button class="btn" id="btn-5"value="5">Pausa Curta</button>
                 <button class="btn" id="btn-15" value="15">Pausa Longa</button>
+                <button class="btn" id="pause" value="15">Pause</button>
             </div>
         </div>
     </div>
